BC-527: Add view tests for sorting